--- a/Source/Gral/Gral.csproj
+++ b/Source/Gral/Gral.csproj
@@ -240,6 +240,9 @@
     <Compile Include="GRALDomain\DrawMap\Domain_DrawConcentrationValues.cs">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="GRALDomain\DrawMap\Domain_DrawItemInfos.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="GRALDomain\DrawMap\Domain_DrawRubberLines.cs">
       <SubType>Form</SubType>
     </Compile>
