--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,4 @@
 theme: jekyll-theme-modernist
+title: welcome to the GRAL Graphical-User-Interface (GUI) homepage!
+description: The GUI is a powerful user interface for creating and analyzing GRAL and GRAMM projects and meteorological data
+
