--- a/src/Gral/Gral.csproj
+++ b/src/Gral/Gral.csproj
@@ -127,6 +127,9 @@
       <DependentUpon>BackgroundWorker.cs</DependentUpon>
     </Compile>
     <Compile Include="GRALBackgroundworkers\BackgroundWorkerData.cs" />
+    <Compile Include="GRALBackgroundworkers\Background_GRALMeteoFile.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="GRALBackgroundworkers\Background_GRAMMExport.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -357,6 +360,12 @@
     </Compile>
     <Compile Include="GRALDomForms\SelectItem.Designer.cs">
       <DependentUpon>SelectItem.cs</DependentUpon>
+    </Compile>
+    <Compile Include="GRALDomForms\SelectMultiplePoints.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="GRALDomForms\SelectMultiplePoints.Designer.cs">
+      <DependentUpon>SelectMultiplePoints.cs</DependentUpon>
     </Compile>
     <Compile Include="GRALDomForms\VerticalProfileConcentration.cs">
       <SubType>Form</SubType>
