Add the evaluation for concentration time series

--- a/src/Gral/Gral.csproj
+++ b/src/Gral/Gral.csproj
@@ -127,6 +127,9 @@
       <DependentUpon>BackgroundWorker.cs</DependentUpon>
     </Compile>
     <Compile Include="GRALBackgroundworkers\BackgroundWorkerData.cs" />
+    <Compile Include="GRALBackgroundworkers\Background_EvalTimeSeries.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="GRALBackgroundworkers\Background_GRALMeteoFile.cs">
       <SubType>Form</SubType>
     </Compile>
