--- a/src/Gral.csproj
+++ b/src/Gral.csproj
@@ -1,8 +1,9 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFramework>net6.0-windows7.0</TargetFramework>
+    <TargetFramework>net6.0-windows10.0.17763.0</TargetFramework>
     <OutputType>WinExe</OutputType>
     <AssemblyName>GRAL_GUI</AssemblyName>
+    <EnableCompressionInSingleFile>true</EnableCompressionInSingleFile>
     <ApplicationIcon>favicon1.ico</ApplicationIcon>
     <IsWebBootstrapper>false</IsWebBootstrapper>
     <NoStdLib>False</NoStdLib>
@@ -36,6 +37,7 @@
     <AllowUnsafeBlocks>True</AllowUnsafeBlocks>
     <ApplicationDefaultFont>Segoe UI,9pt</ApplicationDefaultFont>
     <Platforms>AnyCPU;x64</Platforms>
+    <SupportedOSPlatformVersion>10.0.17763.0</SupportedOSPlatformVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <StartAction>Project</StartAction>
