--- a/src/Gral.csproj
+++ b/src/Gral.csproj
@@ -1,6 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFramework>net7.0-windows10.0.17763.0</TargetFramework>
+    <LangVersion>latest</LangVersion>
     <OutputType>WinExe</OutputType>
     <AssemblyName>GRAL_GUI</AssemblyName>
     <EnableCompressionInSingleFile>true</EnableCompressionInSingleFile>
@@ -36,7 +37,6 @@
     <AllowUnsafeBlocks>True</AllowUnsafeBlocks>
     <ApplicationDefaultFont>Segoe UI,9pt</ApplicationDefaultFont>
     <Platforms>AnyCPU;x64</Platforms>
-    <SupportedOSPlatformVersion>10.0.17763.0</SupportedOSPlatformVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <StartAction>Project</StartAction>
