--- a/src/Gral.csproj
+++ b/src/Gral.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFramework>net7.0-windows10.0.17763.0</TargetFramework>
-    <LangVersion>latest</LangVersion>
+    <TargetFramework>net8.0-windows</TargetFramework>
+    <LangVersion>preview</LangVersion>
     <OutputType>WinExe</OutputType>
     <AssemblyName>GRAL_GUI</AssemblyName>
     <EnableCompressionInSingleFile>true</EnableCompressionInSingleFile>
