Keep the previous behavior for the row index start at 0

--- a/runtimeconfig.template.json
+++ b/runtimeconfig.template.json
@@ -1,6 +1,7 @@
 {
   "configProperties": 
   {
-    "System.Net.DisableIPv6": "true" 
+    "System.Net.DisableIPv6": "true",
+    "System.Windows.Forms.DataGridViewUIAStartRowCountAtZero": true
   }
 }
