Apply the changes from the Windows version

--- a/src/Gral.csproj
+++ b/src/Gral.csproj
@@ -9,7 +9,7 @@
     <RootNamespace>Gral</RootNamespace>
     <AssemblyName>GRAL_GUI</AssemblyName>
     <ApplicationIcon>favicon1.ico</ApplicationIcon>
-    <TargetFrameworkVersion>v4.7</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileUpgradeFlags>
     </FileUpgradeFlags>
     <UpgradeBackupLocation>
@@ -41,6 +41,7 @@
     <ApplicationVersion>1.0.0.%2a</ApplicationVersion>
     <UseApplicationTrust>false</UseApplicationTrust>
     <BootstrapperEnabled>true</BootstrapperEnabled>
+    <ReleaseVersion>14.11</ReleaseVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -58,6 +59,7 @@
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <FileAlignment>4096</FileAlignment>
     <PlatformTarget>x64</PlatformTarget>
+    <NoStdLib>true</NoStdLib>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>None</DebugType>
@@ -77,6 +79,7 @@
     <CheckForOverflowUnderflow>True</CheckForOverflowUnderflow>
     <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
     <CodeAnalysisIgnoreGeneratedCode>true</CodeAnalysisIgnoreGeneratedCode>
+    <NoStdLib>true</NoStdLib>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)' == 'Debug' ">
     <CheckForOverflowUnderflow>False</CheckForOverflowUnderflow>
@@ -1378,6 +1381,7 @@
     <Compile Include="GRALIO\IO_ESRIFileWrite.cs" />
     <Compile Include="GRALData\GuiSettingsData.cs" />
     <Compile Include="GRALData\ProjectSettings.cs" />
+    <Compile Include="GRALShapeFiles\ShapeWriterBourkeLines.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\favicon1.ico" />
